--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.28.1",
     "recharts": "^2.15.3"
   },
   "scripts": {
